# reimu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
guitest/: CMakeLists.txt  main.cpp
lib/reimu/: CMakeLists.txt  event.cpp  resource_manager.cpp  unicode.cpp
lib/reimu/graphics/: CMakeLists.txt  font.cpp  freetype.h  matrix.cpp  painter.cpp  renderer.cpp  surface.cpp  text.cpp  texture.cpp  transform.cpp
lib/reimu/graphics/webgpu/: render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  surface.h  texture.cpp  texture.h  webgpu.cpp  webgpu.h
lib/reimu/gui/: CMakeLists.txt  button.cpp  compositor.cpp  compositor.h  dialog.cpp  label.cpp  layout.cpp  root.cpp  style.cpp  terminal.cpp  terminal_grid.h  textbox.cpp  widget.cpp  window.cpp
lib/reimu/include/reimu/core/: error.h  event.h  file.h  hash.h  logger.h  message.h  optional.h  resource.h  resource_manager.h  result.h  server.h  string_id.h  tuple.h  unicode.h  util.h
lib/reimu/include/reimu/graphics/: color.h  font.h  matrix.h  painter.h  rect.h  render_pass.h  renderer.h  surface.h  text.h  texture.h  transform.h  vector.h
lib/reimu/include/reimu/gui/: app.h  dialog.h  layout.h  style.h  terminal.h  widget.h  window.h
lib/reimu/include/reimu/os/: error.h  fs.h  handle.h  platform.h
lib/reimu/include/reimu/video/: driver.h  input.h  video.h  window.h
lib/reimu/os/unix/: CMakeLists.txt  event_loop.cpp  file.cpp  fs.cpp
lib/reimu/os/win/: CMakeLists.txt  event_loop.cpp  file.cpp  fs.cpp
lib/reimu/tests/: CMakeLists.txt  error.cpp
lib/reimu/video/: CMakeLists.txt  driver.h  video.cpp  window.cpp
lib/reimu/video/egl/: egl.cpp  egl.h
lib/reimu/video/wayland/: driver.h  wayland_client.cpp  window.h
lib/reimu/video/win/: driver.h  win32.cpp  window.h
scripts/: i686-w64-mingw32.cmake  mingw-cmake  x86_64-w64-mingw32.cmake
servers/reimu/: main.cpp
servers/wm/: CMakeLists.txt  gpu.h  main.cpp
terminal/: CMakeLists.txt  main.cpp
